--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -109,6 +109,8 @@
         }
     ],
     "files.associations": {
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "limits.h": "c",
+        "stddef.h": "c"
     }
 }
