--- a/.github/workflows/valgrind.yml
+++ b/.github/workflows/valgrind.yml
@@ -1,17 +1,25 @@
 name: Valgrind
 on:
   workflow_dispatch:
-    inputs:
-      extra_resolve_options:
-        description: "Extra Resolve Options"
-        required: false
   schedule:
     - cron: "0 1 * * *"
   push:
   pull_request:
 jobs:
+
   valgrind:
-    name: Valgrind
-    uses: steinwurf/valgrind-action/.github/workflows/action.yml@5.0.0
-    with:
-      extra_resolve_options: ${{ github.events.inputs.extra_resolve_options }}
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Install package
+      run: |
+        sudo apt-get -y install valgrind
+    - name: Build
+      uses: github/codeql-action/autobuild@v2
+        
+    - name: Test
+      run: |
+        valgrind --tool=memcheck --leak-check=full --show-leaks-kind=yes
+        
