--- a/.github/workflows/valgrind.yml
+++ b/.github/workflows/valgrind.yml
@@ -6,21 +6,26 @@ on:
   push:
   pull_request:
 jobs:
-
   valgrind:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-
     - name: Install package
       run: |
         sudo apt-get -y install valgrind
     - name: Build
       run: |
         make all
-        
-    - name: Test
+
+    - name: Verify Changed files
+      uses: tj-actions/verify-changed-files@v12
+      id: verify-changed-files
+      with:
+        files: |
+           **/*
+
+    - name: Test changed files
+      if: steps.verify-changed-files.outputs.files_changed == 'true'
       run: |
-        valgrind --tool=memcheck --leak-check=full --show-leaks-kind=yes
-        
+        valgrind --tool=memcheck --leak-check=full --show-leaks-kind=yes ${{ steps.verify-changed-files.outputs.changed_files }}
