--- a/.github/workflows/valgrind.yml
+++ b/.github/workflows/valgrind.yml
@@ -28,4 +28,4 @@ jobs:
     - name: Test changed files
       if: steps.verify-changed-files.outputs.files_changed == 'true'
       run: |
-        valgrind --tool=memcheck --leak-check=full --show-leak-kinds=yes ${{ steps.verify-changed-files.outputs.changed_files }}
+        valgrind --tool=memcheck --leak-check=full --show-leak-kinds=all ${{ steps.verify-changed-files.outputs.changed_files }}
