--- a/.github/workflows/valgrind.yml
+++ b/.github/workflows/valgrind.yml
@@ -28,4 +28,8 @@ jobs:
     - name: Test changed files
       if: steps.verify-changed-files.outputs.files_changed == 'true'
       run: |
-        valgrind --tool=memcheck --leak-check=full --show-leak-kinds=all ${{ steps.verify-changed-files.outputs.changed_files }}
+        declare -a files
+        file = ${{ steps.verify-changed-files.outputs.changed_files }}
+        for i in "${files}"; do
+          valgrind --tool=memcheck --leak-check=full --show-leak-kinds=all i
+        done
