--- a/.github/workflows/valgrind.yml
+++ b/.github/workflows/valgrind.yml
@@ -29,6 +29,7 @@ jobs:
       if: steps.verify-changed-files.outputs.files_changed == 'true'
       run: |
         files=(${{ steps.verify-changed-files.outputs.changed_files }})
-        for i in "${files}"; 
-        do valgrind --tool=memcheck --leak-check=full --show-leak-kinds=all "$i";
+        for ((i = 0; i < ${#files[@]}; i++))
+        do
+           valgrind --tool=memcheck --leak-check=full --show-leak-kinds=all "${files[$i]}";
         done
