--- a/.github/workflows/valgrind.yml
+++ b/.github/workflows/valgrind.yml
@@ -23,7 +23,7 @@ jobs:
       id: verify-changed-files
       with:
         files: |
-           **/*
+           test/*
 
     - name: Test changed files
       if: steps.verify-changed-files.outputs.files_changed == 'true'
